Fix huge messages from being too large for the screen, as well fix duplicate rooms

--- a/src/front_end/Chat/chat.css
+++ b/src/front_end/Chat/chat.css
@@ -7,6 +7,8 @@
 .message {
   border-radius: 20px;
   padding: 8px 15px;
+  max-width: 100%;
+  word-wrap: break-word;
   margin-top: 5px !important;
   margin-bottom: 5px !important;
   display: inline-block !important;
